figdir = 
figdir += figures/gtkam_add_camera_enhanced_window.png
figdir += figures/gtkam_add_camera_window.png
figdir += figures/gtkam_fileinfo.png
figdir += figures/gtkam_makedir.png
figdir += figures/gtkam_save_all.png
figdir += figures/gtkam_save.png
figdir += figures/gtkam_start_window.png

docname = gtkam
lang = ru
omffile = gtkam-ru.omf
entities = legal.xml
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook
