figdir = figures

docname = gtkam
lang = ru
omffile = gtkam-ru.omf
entities = legal.xml
include $(top_srcdir)/xmldocs.make

EXTRA_DIST += figures/gtkam_add_camera_enhanced_window.png
EXTRA_DIST += figures/gtkam_add_camera_window.png
EXTRA_DIST += figures/gtkam_fileinfo.png
EXTRA_DIST += figures/gtkam_makedir.png
EXTRA_DIST += figures/gtkam_save_all.png
EXTRA_DIST += figures/gtkam_save.png
EXTRA_DIST += figures/gtkam_start_window.png

dist-hook: app-dist-hook
